--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.1"
+    "eslint-plugin-react": "^7.11.1",
+    "tachyons": "^4.10.0"
   },
   "dependencies": {
     "axios": "^0.18.0",
