--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "dotenv": "^6.0.0",
+    "moment": "^2.22.2",
     "react": "^16.5.1",
+    "react-datepicker": "^1.6.0",
     "react-dom": "^16.5.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5"
@@ -13,7 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "seed": "node scripts/seedDB.js"
   },
   "devDependencies": {
     "tachyons": "^4.10.0"
